2006-11-13  Sven Neumann  <sven@gimp.org>

	* app/tools/gimprectangletool.c: reduced the size of the side
	handles to two third the size of the corner handles.

2006-11-13  Michael Natterer  <mitch@gimp.org>

	* app/xcf/xcf.c (xcf_load_invoker): fix g_str_has_prefix() change
	below. Now we can open XCF files again. Fixes bug #374657.

2006-11-12  Michael Natterer  <mitch@gimp.org>

	* app/base/base.c
	* app/core/gimp-user-install.c
	* app/core/gimpbrushgenerated-load.c
	* app/core/gimpcontainer.c
	* app/core/gimpgradient-load.c
	* app/core/gimppalette-load.c
	* app/core/gimpparamspecs-desc.c
	* app/dialogs/tips-parser.c
	* app/menus/plug-in-menus.c
	* app/plug-in/gimppluginmanager.c
	* app/plug-in/gimppluginprocedure.c
	* app/text/gimptext-parasite.c
	* app/tools/gimpforegroundselecttool.c
	* app/widgets/gimpselectiondata.c
	* app/xcf/xcf.c: use g_str_has_prefix() instead of strncmp().

2006-11-11  Michael Natterer  <mitch@gimp.org>

	* configure.in: added -Winit-self and -Wpointer-arith to CFLAGS.

2006-11-11  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpselectiontool.c
	(gimp_selection_tool_modifier_key): Fix behavior so that when Alt
	is down, it appears as if no other modifier was pressed.
	Fixes bug #349338.

2006-11-09  Kevin Cozens  <kcozens@cvs.gnome.org>

	* plug-ins/script-fu/scheme-wrapper.c (marshall_proc_db_call): Use
	vectors instead of the non-standard array structure. Also made some
	minor coding style changes in the file.

	* plug-ins/script-fu/tinyscheme/opdefines.h
	* plug-ins/script-fu/tinyscheme/scheme-private.h
	* plug-ins/script-fu/tinyscheme/scheme.h
	* plug-ins/script-fu/tinyscheme/scheme.c: Removed all code related
	to the handling of the non-standard array structure. Added one small
	change to scheme.c to fix problems compiling with MSVC in Windows.

	* plug-ins/script-fu/scripts/script-fu-compat.init: Changed array
	references to use vector references.

2006-11-09  Michael Natterer  <mitch@gimp.org>

	* plug-ins/rcm/rcm.c